<resources>
    <string name="app_name">RSK - App</string>
    <string name="tabOverview">Übersicht</string>
    <string name="tabProjects">Projekte</string>
    <string name="title">RSK - Kleinreparaturen</string>
    <string name="archivedProjects">Archivierte Projekte</string>
    <string name="recentlyVisitedProject">Zuletzt angesehenes Projekt</string>
    <string name="requests">Planungen</string>
    <string name="unknown">Unbekannt</string>
    <string name="started">Gestartet</string>
    <string name="stopped">Gestoppt</string>
    <string name="save">Speichern</string>
    <string name="addProject">Neues Projekt</string>
    <string name="workTime">Arbeitszeit</string>
    <string name="pause">Pausen</string>
    <string name="total">Gesamte Zeit</string>
    <string name="data">Daten</string>
    <string name="name">Name</string>
    <string name="workDescription">Arbeitsbeschreibung</string>
    <string name="finish">Fertig</string>
    <string name="newPause">Neue Pause</string>
    <string name="errorDialog">Ein Fehler ist aufgetreten</string>
    <string name="close">Schließen</string>
    <string name="search">Suchen</string>
    <string name="addPause">Neue Pause</string>
    <string name="cancel">Abbrechen</string>
    <string name="hours">Stunden</string>
    <string name="minutes">Minuten</string>
    <string name="textDivider">|</string>
    <string name="back">Zurück</string>
    <string name="errorOccurred">Ein Fehler ist aufgetreten</string>
    <string name="info">Info</string>
    <string name="appInfo">Über die App</string>
    <string name="newRequest">Neue Planung</string>
    <string name="request">Planung</string>
    <string name="date">Datum</string>
    <string name="convertToProject">Zu Projekt konvertieren</string>
    <string name="manageCustomerNames">Projekt Namen verwalten</string>
    <string name="customerNames">Projekt Namen</string>
    <string name="workDescriptions">Arbeitsbeschreibungen</string>
    <string name="newCustomerName">Neuer Projektname</string>
    <string name="names">Namen</string>
    <string name="convertToRequest">Zu Planung konvertieren</string>
    <string name="newWorkDescription">Neue Arbeitsbeschreibung</string>
    <string name="filter">Filter</string>
    <string name="edit">Anpassen</string>
    <string name="choose">Auswählen</string>
    <string name="allow">Erlauben</string>
    <string name="deny">Ablehnen</string>
</resources>
