<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@color/grey">

    <TextView
            android:text="@string/requests" android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/save" android:textColor="@android:color/white" android:background="@drawable/button_background_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonSave"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp" tools:layout_editor_absoluteX="1dp" app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/buttonSave" android:layout_marginTop="8dp"
            android:id="@+id/recyclerView"/>
    <Button
            android:text="@string/newRequest"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/buttonAddRequest"
            app:layout_constraintEnd_toStartOf="@+id/buttonSave" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            android:background="@drawable/button_background_1" android:textColor="@android:color/white"
            android:drawableStart="@drawable/ic_add" app:layout_constraintTop_toTopOf="@+id/buttonSave"
            app:layout_constraintStart_toEndOf="@+id/buttonBack" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonBack"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/buttonAddRequest" android:background="@drawable/button_background"
            android:textColor="@android:color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>