<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@color/grey">

    <TextView
            android:text="@string/addPause" android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/finish" android:background="@drawable/button_background" android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonFinish"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@android:color/white"
        app:backgroundTint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider9" />

    <EditText
        android:id="@+id/editTextMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@android:color/white"
        app:backgroundTint="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/editTextHours"
        app:layout_constraintTop_toBottomOf="@+id/editTextHours" />
    <View
            android:background="@drawable/divider_background"
            android:id="@+id/divider9"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" android:layout_marginEnd="4dp" android:layout_marginRight="4dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="64dp"/>
    <TextView
            android:text="@string/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            android:textColor="@android:color/white" app:layout_constraintStart_toStartOf="@+id/editTextHours"
            app:layout_constraintTop_toBottomOf="@+id/editTextHours"/>
    <TextView
            android:text="@string/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:textColor="@android:color/white" app:layout_constraintStart_toStartOf="@+id/editTextMinutes"
            app:layout_constraintTop_toBottomOf="@+id/editTextMinutes"/>
    <Button
            android:text="@string/cancel" android:background="@drawable/button_background_1" android:textColor="@android:color/white"
            android:paddingLeft="10dp" android:paddingStart="10dp" android:paddingRight="10dp" android:paddingEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonCancel"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>