<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@color/grey">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/archivedProjects"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttonSave" android:layout_marginBottom="8dp" android:id="@+id/recyclerView"/>
    <Button
            android:background="@drawable/button_background_1" android:textColor="@android:color/white"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonSave"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <Button
            android:text="@string/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/buttonBack"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/buttonSave" app:layout_constraintEnd_toStartOf="@+id/buttonSave"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:background="@drawable/button_background"
            android:textColor="@android:color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>